<resources>
    <string name="app_name">Openforce</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="title_activity_maps">Map</string>
    <string name="hint_email">Email</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="hint_password">Password</string>
    <string name="hint_first_name">First name</string>
    <string name="button_cancel">Cancel</string>
    <string name="invalid_email">Invalid email</string>
    <string name="empty_name">First Name cannot be empty.</string>
    <string name="empty_last_name">Last name cannot be empty</string>
    <string name="empty_password">Password cannot be empty</string>
    <string name="empty_confirm_password">Confirm password cannot be empty</string>
    <string name="confirm_password_no_match">Confirm password does not match</string>
    <string name="error_on_signup">Ops! There\'s been a problem signin up.</string>
    <string name="menu_account">Account</string>
    <string name="menu_jobs">Jobs</string>
    <string name="menu_inbox">Inbox</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="error_login">Error logging in</string>
    <string name="vetting_subtitle">Complete these items to get hire ready</string>
    <string name="vetting_add_experience_skills">Add experience and skills</string>
    <string name="vetting_add_references">Add identity and references</string>
    <string name="vetting_add_payment">Payment information</string>
    <string name="vettin_secure_account">Secure account</string>
    <string name="vetting_welcome">Welcome %1$s</string>
    <string name="identity_references">Identity and references</string>
    <string name="add_email_references">Add email references</string>
    <string name="previous_contact_emails">Two previous professional references</string>
    <string name="done">Done</string>
    <string name="references">References</string>
    <string name="hint_name">Enter name</string>
    <string name="hint_enter_email">Enter email</string>
    <string name="save">Save</string>
    <string name="stripe">Stripe.com</string>
    <string name="get_paid_with_stripe">Get paid with Stripe</string>
    <string name="connect_setup_stripe">Connect and setup a Stripe account to get paid automatically</string>
    <string name="connected_stripe">Your account has been created and is ready to receive payment</string>
    <string name="stripe_term">Stripe\'s terms and condition</string>
    <string name="saving_stripe_info">Saving payment information</string>
    <string name="error_save_user_payment_info">There\'s been an error saving your Payment Info. Please try again.</string>
    <string name="btnDialogYes">Yes</string>
    <string name="btnDialogNo">No</string>

    <string name="dialogDisconnectText">Disconnect from Stripe?</string>
    <string name="invalid_reference">Please fill all details</string>
    <string name="saving_references">Saving references…</string>
    <string name="loading">Loading</string>
    <string name="secure_account">Secure your account</string>
    <string name="register_phone_number">Register phone number</string>
    <string name="need_phone_number">We need your phone number to allow you to chat with employers</string>
    <string name="pin_seemlessly">This PIN will be user seemlessly log you in</string>
    <string name="set_login_pin">Set a log in PIN</string>
    <string name="add_phone_number">Add phone number</string>
    <string name="increase_your_account_sec">Increase your account security by verifying your phone number (i.e.+91XXXXXXXXXX)</string>
    <string name="hint_phone_number">Enter phone number</string>
    <string name="next">Next</string>
    <string name="invalid_number">Please provide a valid UK phone number</string>
    <string name="verification_failed">Phone verification failed, please retry later.</string>
    <string name="invalid_code">Verification code is invalid.</string>
    <string name="verifying">Verifying…</string>
    <string name="verifying_number">We\'re verifying your number…</string>
    <string name="phone_number_verified">Phone number correctly verified</string>
    <string name="confirm">Confirm</string>
    <string name="hint_code_phone_number">Enter code</string>
    <string name="error_save_user_references">There\'s been an error saving your references. Please try again.</string>
    <string name="set_pin">Set a login PIN</string>
    <string name="confirm_pin">Confirm a login PIN</string>
    <string name="pin_do_not_match">Pin do not match</string>
    <string name="pin_successfully_set">Pin successfully set.</string>
    <string name="error_saving_pin">Error saving pin.</string>
    <string name="saving_pin">Saving pin…</string>
    <string name="search_roles_expertise">Search roles and expertise</string>
    <string name="error_loading_roles">There\'s been an error loading the list of roles</string>
    <string name="pound_symbol">£</string>
    <string name="per_day">per day</string>
    <string name="skill_level">Skill level</string>
    <string name="saving">Saving…</string>
    <string name="error_saving_skill">Error saving skill</string>
    <string name="tomorrow">TOMORROW</string>
    <string name="login_with_your_pin">Login with your pin</string>
    <string name="wrong_pin">PIN incorrect</string>
    <string name="london">London</string>
    <string name="phone_number_updated">You phone number has been updated!</string>
    <string name="update_phone_number">Update phone number</string>
    <string name="button_confirm">Confirm</string>
    <string name="cannot_verify_password">Cannot verify password</string>
    <string name="verifying_password">Checking password…</string>
    <string name="hint_current_password">Enter Login Password</string>
    <string name="pin_reset">PIN Reset</string>
    <string name="availability">Availability</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="job">Job</string>
    <string name="rate">rate</string>
    <string name="amount">Amount</string>
    <string name="location">Location</string>
    <string name="apply">Apply</string>
    <string name="withdraw_application">Withdraw your application</string>
    <string name="error_applying_job">There\'s been an error applying for this job. Please retry.</string>
    <string name="successfully_applied">You\'ve successfully applied for this job.</string>
    <string name="successfully_withdraw">You\'ve successfully withdrew from this job</string>
    <string name="error_withdraw_job">There\'s been an error withdrawing your application for this job. Please retry.</string>
    <string name="cannot_load_conversations">Cannot load conversations, please try again.</string>
    <string name="status">Status</string>
    <string name="checked_in">Checked in</string>
    <string name="checking_in">Checking in…</string>
    <string name="ending_job">Ending job…</string>
    <string name="end_job">End job</string>
    <string name="end_job_message_dialog">Are you sure you want to end this job?</string>
    <string name="check_in">Check-in</string>
    <string name="check_in_message_dialog">Are you sure you want to check-in now?</string>
    <string name="error_loading_messages">Error loading messages</string>
    <string name="empty_day_rate">You need to select your daily rate for this job.</string>
    <string name="openforce_job_history">Openforce Job History</string>
    <string name="search_for_job">Search for a job</string>
    <string name="not_rated">Not rated</string>
    <string name="review_title">Let us know if you enjoyed working with\n%1$s?</string>
    <string name="rate_time">Rate your time with %1$s</string>
    <string name="select_rating_error">You should select a rating before leaving a review.</string>
    <string name="error_try_again">Oops, there\'s been an error. Please try again</string>
    <string name="job_reviewed_message">Success! A review has been left.</string>
    <string name="empty_email">Please, input a valid email address.</string>
    <string name="reset_password">Password reset</string>
    <string name="reset_password_message_confirmation">Do you want to reset your password?</string>
    <string name="error_resetting_password">There has been an error while resetting your password. Please try again.</string>
    <string name="reset_password_success">We\'ve sent an email to reset your password. Please check your email and follow the instructions.</string>
    <string name="apply_unvetted">You cannot apply to jobs until you finish the vetting process.</string>
    <string name="congratulations_hired">Congratulations, you are hired!</string>
    <string name="skill_unset">You don\'t have %1$s skill in your profile. Please add it before applying to this job.</string>
    <string name="messages">Messages</string>
    <string name="posted_at">Posted %1$s</string>
    <string name="error_uploading_image">There has been an error uploading the image.</string>
    <string name="below_minimum_wage">Please make sure that your day rate is above 60 GBP.</string>
    <string name="enter_security_code">Enter security code</string>
    <string name="error_password_not_good">Password must be at least 8 chars, contains 1 digit, 1 lowercase and 1 uppercase char</string>
    <string name="picking_role">Picking your role and defining your skill level will tailor your job results</string>
    <string name="most_wanted_jobs">MOST WANTED JOBS</string>
<!---->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm_transfer">Confirm Transfer</string>
    <string name="balance_withdraw_text">The transfer will only be actioned once  you click confirm transfer.\n \nThe following amount [x,xxx.xx] will be transferred to your account stripe account within the next x working days.</string>
</resources>