<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/menu_account"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_map"
        android:enabled="true"
        android:icon="@drawable/ic_location_on_black_24dp"
        android:title="@string/menu_jobs"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_conversation"
        android:enabled="true"
        android:icon="@drawable/ic_message_black_24dp"
        android:title="@string/menu_inbox"
        app:showAsAction="always" />
</menu>