<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:paddingTop="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:theme="@style/StandardEditText"
                android:hint="@string/hint_email" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLength="15"
                android:theme="@style/StandardEditText"
                android:hint="@string/hint_password" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_marginTop="38dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">

            <Button
                style="@style/Button.Yellow"
                android:id="@+id/button_cancel"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_marginEnd="9dp"
                android:text="@string/button_cancel"/>

            <Button
                style="@style/Button.Yellow"
                android:id="@+id/button_signin"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:backgroundTintMode="src_atop"
                android:layout_marginStart="9dp"
                android:text="@string/sign_in"/>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/forgot_password_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="14sp"
        android:gravity="center"
        android:textStyle="normal"
        android:textColor="#ffffff"
        android:layout_marginTop="33dp"
        android:layout_marginBottom="33dp"/>
</LinearLayout>