<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:paddingTop="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/StandardEditText"
                android:hint="@string/hint_first_name" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/StandardEditText"
                android:hint="@string/hint_last_name" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:theme="@style/StandardEditText"
                android:hint="@string/hint_email" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLength="15"
                android:theme="@style/StandardEditText"
                android:hint="@string/hint_password" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="15"
                android:inputType="textPassword"
                android:theme="@style/StandardEditText"
                android:hint="@string/hint_confirm_password" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_marginTop="18dp"
            android:id="@+id/label_terms_and_privacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="#61000000"
            android:lineSpacingExtra="4sp"
            tools:text="By continuing, you agree to Terms of Service and Privacy Notice"/>

        <LinearLayout
            android:layout_marginTop="38dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">

            <Button
                style="@style/Button.Yellow"
                android:id="@+id/button_cancel"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_marginEnd="9dp"
                android:text="@string/button_cancel"/>

            <Button
                style="@style/Button.Yellow"
                android:id="@+id/button_signup"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_marginStart="9dp"
                android:text="@string/sign_up"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>