<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:background="@color/sun_yellow"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_arrow_back_black_24dp"
            />

        <TextView
            android:id="@+id/title_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_phone_number"
            android:textAlignment="center"
            style="@style/Label.SansSerifMedium"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_blue"
        android:orientation="vertical">

        <TextView
            style="@style/Label.SansSerif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/increase_your_account_sec"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/enter_phone_number_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="24dp"
            android:padding="24dp"
            android:background="@color/white"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/StandardEditText"
                    android:hint="@string/hint_phone_number" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/next_button"
                android:layout_width="match_parent"
                android:text="@string/next"
                android:textAllCaps="true"
                android:layout_marginTop="16dp"
                style="@style/Button.Yellow"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/verify_code_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="24dp"
            android:padding="24dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:theme="@style/StandardEditText"
                    android:hint="@string/hint_code_phone_number" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/confirm_button"
                android:layout_width="match_parent"
                android:text="@string/confirm"
                android:textAllCaps="true"
                android:layout_marginTop="16dp"
                style="@style/Button.Yellow"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>